# BharatBuildsEnv

./: .gitignore  README.md  __init__.py  bharat_builds_training.ipynb  client.py  data.py  environment.py  generate_data.py  models.py  openenv.yaml  requirements.txt  server.py  verifiers.py
BharatBuildsEnv/: client.py  pyproject.toml
BharatBuildsEnv/server/: Dockerfile  app.py
server/: BharatBuildsEnv_environment.py  __init__.py  data.py  requirements.txt  verifiers.py
