[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-BharatBuildsEnv"
version = "0.2.0"
description = "BharatBuilds RL environment — AI co-founder for Indian entrepreneurs"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (FastAPI server + WebSocket client)
    "openenv-core[core]>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
training = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "trl>=0.8.0",
    "unsloth",
    "datasets>=2.18.0",
]

[project.scripts]
# Run the server: uv run --project . server
server = "BharatBuildsEnv.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["BharatBuildsEnv", "BharatBuildsEnv.server"]
package-dir = { "BharatBuildsEnv" = ".", "BharatBuildsEnv.server" = "server" }
